--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
-    <groupId>com.azuo.intelligent</groupId>
+    <groupId>com.yazuo.intelligent</groupId>
     <artifactId>cloud-starter-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -17,7 +17,7 @@
         <!--  MyBatis Generator  -->
         <targetJavaProject>${project.basedir}/src/main/java</targetJavaProject>
         <targetResourcesProject>${project.basedir}/src/main/resources</targetResourcesProject>
-        <fastjsonVersion>1.2.37</fastjsonVersion>
+        <fastjsonVersion>1.2.40</fastjsonVersion>
         <api.prefix>com/yazuo/**/</api.prefix>
     </properties>
 
@@ -35,6 +35,21 @@
             <optional>true</optional>
         </dependency>
     </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjsonVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.16.18</version>
+                <optional>true</optional>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
