--- a/pom.xml
+++ b/pom.xml
@@ -21,66 +21,80 @@
     </properties>
 
     <dependencies>
+        <!--yml config生成-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure-processor</artifactId>
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.yazuo.intelligent</groupId>
-            <artifactId>clound-bootstrap-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.yazuo.architecture</groupId>
-            <artifactId>shutdown-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <!--分页插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+        </dependency>
+        <!--spring cloud 必须要的依赖-->
+        <dependency>
+            <groupId>com.yazuo.intelligent</groupId>
+            <artifactId>clound-bootstrap-starter</artifactId>
+        </dependency>
+        <!--优雅停机插件-->
+        <dependency>
+            <groupId>com.yazuo.architecture</groupId>
+            <artifactId>shutdown-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+        <!--日志-->
         <dependency>
             <groupId>com.yazuo.intelligent</groupId>
             <artifactId>logger-starter</artifactId>
         </dependency>
+        <!--热启动-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+        <!--缓存-->
         <dependency>
             <groupId>com.yazuo.intelligent</groupId>
             <artifactId>cache-starter</artifactId>
         </dependency>
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!--文档-->
         <dependency>
             <groupId>com.yazuo.intelligent</groupId>
             <artifactId>swagger-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
-        <dependency>
             <groupId>io.springfox.ui</groupId>
             <artifactId>springfox-swagger-ui-rfc6570</artifactId>
         </dependency>
+
+        <!--test-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
