--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,8 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <compilerArgument>-parameters</compilerArgument>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
             <plugin>
