--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,11 @@
                         <artifactId>mapper</artifactId>
                         <version>3.4.0</version>
                     </dependency>
+                    <dependency>
+                        <groupId>com.softwareloop</groupId>
+                        <artifactId>mybatis-generator-lombok-plugin</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                    </dependency>
                 </dependencies>
             </plugin>
 
@@ -264,6 +269,28 @@
             </build>
         </profile>
     </profiles>
+    <repositories>
+        <repository>
+            <id>aliyun</id>
+            <url>http://maven.aliyun.com/nexus/content/groups/public</url>
+        </repository>
+        <repository>
+            <id>nexus</id>
+            <url>http://nexus.yazuosoft.com/nexus/content/groups/public-all/</url>
+        </repository>
+        <repository>
+            <id>releases</id>
+            <url>http://nexus.yazuosoft.com/nexus/content/repositories/releases</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+        <repository>
+            <id>Snapshots</id>
+            <url>http://nexus.yazuosoft.com/nexus/content/repositories/snapshots</url>
+        </repository>
+    </repositories>
+
     <distributionManagement>
         <repository>
             <id>releases</id>
