--- a/pom.xml
+++ b/pom.xml
@@ -110,11 +110,6 @@
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
-
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
             <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>dockerfile-maven-plugin</artifactId>
@@ -201,6 +196,16 @@
                     dev
                 </spring.profiles.active>
             </properties>
+            <build>
+                <finalName>${project.artifactId}</finalName>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+
         </profile>
         <profile>
             <id>test</id>
@@ -217,6 +222,16 @@
                     predeploy
                 </spring.profiles.active>
             </properties>
+            <build>
+                <finalName>${project.artifactId}</finalName>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+
         </profile>
         <profile>
             <id>huidu</id>
@@ -225,6 +240,16 @@
                     huidu
                 </spring.profiles.active>
             </properties>
+            <build>
+                <finalName>${project.artifactId}</finalName>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+
         </profile>
         <profile>
             <id>production</id>
@@ -233,11 +258,21 @@
                     production
                 </spring.profiles.active>
             </properties>
+            <build>
+                <finalName>${project.artifactId}</finalName>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+
         </profile>
         <profile>
             <id>client</id>
             <build>
-                <finalName>${project.artifactId}-client-${project.version}</finalName>
+                <finalName>${project.artifactId}-${project.version}</finalName>
                 <plugins>
                     <plugin>
                         <artifactId>maven-jar-plugin</artifactId>
@@ -250,7 +285,39 @@
                             </includes>
                         </configuration>
                     </plugin>
-
+                    <plugin>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>default-deploy</id>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>deploy</goal>
+                                </goals>
+                                <!-- skip默认deploy插件的执行 -->
+                                <configuration>
+                                    <skip>true</skip>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>deploy-file</id>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>deploy-file</goal>
+                                </goals>
+                                <configuration>
+                                    <packaging>jar</packaging>
+                                    <repositoryId>${project.distributionManagement.snapshotRepository.id}</repositoryId>
+                                    <url>${project.distributionManagement.snapshotRepository.url}</url>
+                                    <file>${project.build.directory}/${project.artifactId}-${project.version}.jar</file>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>${project.artifactId}</artifactId>
+                                    <version>${project.version}</version>
+                                    <classifier>client</classifier>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
